--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "cron": "^1.4.1",
     "discord.js": "^11.4.2",
+    "express": "^4.16.4",
+    "http": "0.0.0",
     "level": "^4.0.0",
     "leveldown": "^4.0.1",
     "levelup": "^3.1.1",
     "mathjs": "^5.2.2",
-    "stellar-sdk": "^0.11.0"
+    "stellar-sdk": "^0.11.0",
+    "underscore": "^1.9.1"
   }
 }
