--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.4",
     "http": "0.0.0",
     "level": "^4.0.0",
+    "level-dump": "^1.1.0",
     "leveldown": "^4.0.1",
     "levelup": "^3.1.1",
     "mathjs": "^5.2.2",
